--- a/style.css
+++ b/style.css
@@ -765,7 +765,7 @@ body {
 .alert-title {
   font-weight: 700;
 }
-.alert-title img{
+.alert-title img {
   padding-left: 6px;
 }
 
@@ -796,6 +796,12 @@ body {
 /* Grid Areas */
 .session-price-card {
   grid-area: price;
+}
+
+.price-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
 .session-details-card {
@@ -980,10 +986,10 @@ body {
 }
 
 .session-about-card p {
-    font-size: 16px;
-    line-height: 1.8;
-    color: #7a6fa3;
-    text-align: justify;
+  font-size: 16px;
+  line-height: 1.8;
+  color: #7a6fa3;
+  text-align: justify;
 }
 .session-host-card {
   grid-area: host;
