--- a/style.css
+++ b/style.css
@@ -882,25 +882,40 @@ body {
 
 .seats span {
   font-size: 13px;
-  color: #999;
+  color: #866eaf;
 }
 
-.progress {
-  width: 100%;
-  height: 8px;
-  background: #eee;
-  border-radius: 20px;
-  overflow: hidden;
-  margin-top: 6px;
+.progress-circle {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: conic-gradient(#8b77b7 0% 70%, #eee 70% 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
-.progress span {
-  display: block;
-  width: 70%;
-  height: 100%;
-  background: #8b77b7;
-  border-radius: 20px;
+.seats{
+  display: flex;
 }
+
+.progress-circle::before {
+  content: "";
+  position: absolute;
+  width: 90px;   /* inner circle size */
+  height: 90px;
+  border-radius: 50%;
+  background: white; /* mask the center to create ring */
+}
+
+.progress-circle span {
+  position: absolute;
+  font-weight: bold;
+  color: #8b77b7; /* same as ring color */
+  font-size: 1.2rem;
+}
+
 
 .session-price-card button {
   background: #8b77b7;
