--- a/style.css
+++ b/style.css
@@ -824,7 +824,7 @@ body {
 .session-header-image img,
 .map img {
   width: 100%;
-  height: 100%;
+  height: 250px;
   object-fit: cover;
   border-radius: 16px;
 }
@@ -896,14 +896,16 @@ body {
   position: relative;
 }
 
-.seats{
+.progress-container {
   display: flex;
+  justify-content: center;
+  margin-top: 8px;
 }
 
 .progress-circle::before {
   content: "";
   position: absolute;
-  width: 90px;   /* inner circle size */
+  width: 90px; /* inner circle size */
   height: 90px;
   border-radius: 50%;
   background: white; /* mask the center to create ring */
@@ -915,7 +917,6 @@ body {
   color: #8b77b7; /* same as ring color */
   font-size: 1.2rem;
 }
-
 
 .session-price-card button {
   background: #8b77b7;
@@ -943,7 +944,7 @@ body {
 
 .session-header-image img {
   width: 100%;
-  height: 100%;
+  height: 250px;
   object-fit: cover;
   border-radius: 16px;
 }
