Feature/ added/ email-verify-form-1

--- a/style/forms-style/form.css
+++ b/style/forms-style/form.css
@@ -72,7 +72,9 @@ body {
 .quote-primary {
   color: #866eaf;
 }
-
+.form-question-title{
+  padding-bottom: 22px;
+}
 .form-input input {
   width: 100%;
   border-radius: 16px;
